--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 body {
   background-color: #f4f4f4;
   color: #414b3c;
-  font-family: 'Bitter', serif;
+  font-family: "Bitter", serif;
 }
 .container {
   border: 1px solid #d2d2d2;
@@ -11,9 +11,6 @@ body {
   padding: 16px;
 }
 .friend {
-  width: 60%;
-  display: flex;
-  justify-content: space-between;
 }
 button {
   border-radius: 4px;
